# 2D_Drawing

./: .gitignore  Algorithms.cpp  Algorithms.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.h  DrawingManager.cpp  DrawingManager.h  FileManager.cpp  FileManager.h  Line.cpp  Line.h  MenuHandler.cpp  MenuHandler.h  README.md  Shape.cpp  Shape.h  Utils.cpp  Utils.h  main.cpp  tasks.txt
Include/: Circle.h  Clipping.h  Curves.h  Ellipse.h  Filling.h  Line.h  MenuController.h  Utils.h  Var&defines.h
Source/: Circle.cpp  Clipping.cpp  Curves.cpp  Ellipse.cpp  Filling.cpp  Line.cpp  MenuController.cpp  Utils.cpp
